--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "react-router-dom": "^7.8.2"
   },
   "scripts": {
-    "start": "vite"
-  }
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
+}
 }
