--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,13 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.8.2"
   },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.7.0",
+    "vite": "^5.4.19"
+  },
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview"
-}
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  }
 }
